k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: familog-backend
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: familog-backend
    spec:
      containers:
      - image: gcr.io/familog-193013/familog:latest
        imagePullPolicy: Always
        name: familog-backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpcwebproxy
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grpcwebproxy 
    spec:
      containers:
      - image: gcr.io/familog-193013/grpcwebproxy:latest
        imagePullPolicy: Always
        name: grpcwebproxy 
        ports:
          - containerPort: 80
            name: http
