k8s/grpc-familog.yml
apiVersion: v1
kind: Service
metadata:
  name: familog-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http2
  selector:
    app: familog-backend
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: familog-backend
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: familog-backend
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: familog-server-key
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http2_port=8080",
          "--service=familog.endpoints.familog-193013.cloud.goog",
          "--version=2018-05-07r0",
          "--backend=grpc://127.0.0.1:8000"
        ]
        ports:
          - containerPort: 8080
      - image: gcr.io/familog-193013/familog:cce562c
        imagePullPolicy: Always
        name: familog-backend
        ports:
          - containerPort: 8000
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
