k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: familog-backend
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    name: grpc
  - protocol: TCP 
    port: 9000
    targetPort: 9000
    name: grpcweb
  selector:
    app: familog-backend
