k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: familog-ingress
spec:
  backend:
    serviceName: grpcwebproxy
    servicePort: 80
